--- a/package.json
+++ b/package.json
@@ -3,7 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-  "proxy": "http://localhost:5001",
+  "proxy": {
+    "/infowapi": {
+      "target": "https://cloudapi.inflowinventory.com",
+      "changeOrigin": true
+    },
+    "/access": {
+      "target": "https://yehey.jp",
+      "changeOrigin": true
+    },
+    "/.*": {
+      "target": "https://egov-micro-dev.egovernments.org/",
+      "changeOrigin": true
+    }
+  },
   "dependencies": {
     "@frontapp/plugin-sdk": "^1.0.1",
     "@testing-library/jest-dom": "^4.2.4",
