--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "dependencies": {
     "@frontapp/plugin-sdk": "^1.0.1",
+    "@ionic/react": "^5.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
