--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ellipsize": "^0.1.0",
     "gulp": "^4.0.2",
     "headroom.js": "0.11.0",
+    "jquery": "^3.5.1",
     "moment": "2.24.0",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "node-sass": "^4.14.1",
