--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "node-sass": "^4.14.1",
     "nouislider": "14.1.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
+    "react-avatar": "^3.9.6",
     "react-bootstrap-icons": "^1.0.2-alpha3",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
