--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp": "^4.0.2",
     "headroom.js": "0.11.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.15",
     "moment": "2.24.0",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "node-sass": "^4.14.1",
