--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@frontapp/plugin-sdk": "^1.0.1",
     "@ionic/react": "^5.1.1",
+    "@ionic/react-router": "^5.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
