--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "reactstrap": "^8.4.1"
   },
   "scripts": {
-    "start": "PORT=5001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
